--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,122 +1,145 @@
-<div class="main-content" >
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Edit Profile</h4>
-                    </div>
-                    <div class="content">
-                        <form>
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label>Company (disabled)</label>
-                                        <input type="text" class="form-control" disabled placeholder="Company" value="Creative Code Inc.">
-                                    </div>
-                                    <span class="alert alert-danger" *ngIf="!myForm.controls['an_owner'].valid"> Required</span>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Username</label>
-                                        <input type="text" class="form-control" placeholder="Username" value="michael23">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Email">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control" placeholder="Company" value="Mike">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>City</label>
-                                        <input type="text" class="form-control" placeholder="City" value="Mike">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Postal Code</label>
-                                        <input type="number" class="form-control" placeholder="ZIP Code">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>About Me</label>
-                                        <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
-                            <div class="clearfix"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card card-user">
-                    <div class="image">
-                        <img src="https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400" alt="..."/>
-                    </div>
-                    <div class="content">
-                        <div class="author">
-                            <a href="#">
-                                <img class="avatar border-gray" src="assets/img/faces/face-3.jpg" alt="..."/>
-
-                                <h4 class="title">Mike Andrew<br />
-                                    <small>michael24</small>
-                                </h4>
-                            </a>
-                        </div>
-                        <p class="description text-center"> "Lamborghini Mercy <br>
-                            Your chick she so thirsty <br>
-                            I'm in that two seat Lambo"
-                        </p>
-                    </div>
-                    <hr>
-                    <div class="text-center">
-                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+    <div class="navbar-header">
+          <ul class="nav navbar-nav navbar-right">
+                  <li>
+                      <a href="#">
+                          <p>Location</p>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                       <p>Phone</p>
+                      </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                     <p>Email</p>
+                     </a>
+                      </li>
+                  <li class="separator hidden-lg hidden-md"></li>
+          </ul>
     </div>
+  </div>
+</nav>    
+<div class="main-content">
+   <div class="container-fluid">
+    <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="header">
+            <h4 class="title">User</h4>
+      </div>
+      <div class="content">
+        <form  [formGroup]="myForm" (ngSubmit)="onSubmit()">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                  <label for="pr_title">Title</label>
+                <select class="form-control" formControlName="pr_title" id="pr_title" name="pr_title">
+                      <option *ngFor='let title of listTitle' [value]="title">{{title}}
+                      </option>
+                </select>
+                </div>
+                <span class="alert alert-danger" *ngIf="!myForm.controls['pr_title'].valid"> Required</span>
+              </div>
+
+              <div class="col-md-4">
+                  <div class="form-group">
+                  <label for="pr_firstname">First Name</label>
+                  <input type="text" class="form-control" id="pr_firstname" placeholder="Enter Firts name" formControlName="pr_firstname"/>
+                  </div>
+                  <span class="alert alert-danger" *ngIf="!myForm.controls['pr_firstname'].valid"> Required</span>
+              </div>
+
+              <div class="col-md-4">
+                  <div class="form-group">
+                    <label  for="pr_lastname">Last Name</label>
+                    <input type="text" class="form-control" id="pr_lastname" formControlName="pr_lastname"/>
+                  </div>
+                  <span class="alert alert-danger" *ngIf="!myForm.controls['pr_lastname'].valid"> Required</span>
+              </div>
+            </div>
+
+            <div class="row">                  
+              <div class="col-md-4">
+                  <div class="form-group">
+                  <label  for="pr_gender">Gender</label> 
+                  <div  *ngFor="let g of genders">
+                        <label >
+                          <input type="radio"
+                              formControlName="pr_gender" [value]="g"> {{ g}}
+                        </label>
+                  </div>                      
+                  </div>
+              </div>              
+              <div class="col-md-4">
+                  <div class="form-group">
+                  <label  for="pr_status">Status</label> 
+                  <div  *ngFor="let sts of status">
+                        <label >
+                          <input type="radio"
+                              formControlName="pr_status" [value]="sts"> {{ sts}}
+                        </label>
+                  </div>                      
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="form-group">
+                      <label for="pr_types">Types</label> 
+                        <div  *ngFor="let tp of types">
+                            <label>
+                                <input type="checkbox"
+                                                [formControlName]="tp"
+                                                [value]="tp">
+                                        {{tp}}
+                                </label>
+                        </div>
+                  </div>
+              </div>
+            </div>
+            <button type="submit" [disabled]="!myForm.valid" class="btn btn-info btn-fill pull-right">Save</button>
+            <div class="clearfix"></div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-12">
+              <div class="card">
+                  <div class="header">
+                      <h4 class="title">List of Users</h4>
+                  </div>
+                  <div class="content table-responsive table-full-width">
+                        <table class="table table-hover table-striped">
+                              <thead>
+                                  <tr>
+                                      <th *ngFor="let cell of headerRow">{{ cell }}</th>
+                                  </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let row of listPersons">
+                                      <td>{{row.pr_firstname| lowercase}}</td> 
+                                      <td>{{row.pr_lastname| lowercase}}</td> 
+                                      <td>{{row.pr_title}}</td> 
+                                      <td>{{row.pr_gender}}</td>     
+                                      <td>{{row.pr_status}}</td> 
+                                      <td>{{row.pr_createdate| date:"MM/dd/yy"}}</td> 
+                                      <td>{{row.pr_types}}</td> 
+                                     <td>
+                                        <a [routerLink]="[user]">  <i class="pe-7s-pen"></i></a>
+                                        <a [routerLink]="[user]">  <i class="pe-7s-delete-user"></i> </a>
+                                      </td> 
+                                </tr> 
+                              </tbody>
+                        </table>
+
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
