--- a/src/app/deworm/deworm.component.html
+++ b/src/app/deworm/deworm.component.html
@@ -1,3 +1,83 @@
-<p>
-  deworm works!
-</p>
+
+<div class="main-content">
+<div class="container-fluid">
+<div class="row">
+      <div class="col-md-12">
+              <div class="card">
+                  <div class="header">
+                      <h4 class="title">Deworm</h4>
+                  </div>
+                  <div class="content">
+                          <form  [formGroup]="myForm" (ngSubmit)="onSubmit()">
+                          <div class="row">
+                              <div class="col-md-4">
+                                  <div class="form-group">
+                                          <input   type="hidden" class="form-control" id="de_id" formControlName="de_id"/>
+                                      <label for="de_date">Date</label>
+                                      <input type="date" class="form-control" id="de_date" formControlName="de_date"/>
+
+                                  </div>
+                                  <span class="alert alert-danger" *ngIf="!myForm.controls['de_date'].valid"> Required</span>
+                              </div>
+                              <div class="col-md-4">
+                                  <div class="form-group">
+                                          <label for="de_name">Name</label>
+                                      <input type="text" class="form-control" id="de_name" placeholder="Enter name" formControlName="de_name"/>
+                                  </div>
+                                  <span class="alert alert-danger" *ngIf="!myForm.controls['de_name'].valid"> Required</span>
+                              </div>
+                              <div class="col-md-4">
+                                  <label for="de_doctor">Doctor</label>
+                                <select class="form-control" formControlName="de_doctor" id="de_doctor" name="de_doctor">
+                                        <option *ngFor='let doctor of listDoctors' [value]="doctor._id">
+                                                {{doctor.pr_lastname + " " + doctor.pr_firstname}}
+                                        </option>
+                               </select>
+                              </div>
+                          </div>
+
+                          <button type="submit" [disabled]="!myForm.valid" class="btn btn-info btn-fill pull-right">Save</button>
+                          <div class="clearfix"></div>
+                      </form>
+                  </div>
+              </div>
+          </div>
+</div>
+</div>
+<div class="container-fluid">
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="header">
+                <h4 class="title">List of Deworm</h4>
+                <!-- <p class="category">Here is a subtitle for this table</p> -->
+            </div>
+            <div class="content table-responsive table-full-width">
+                  <table class="table table-hover table-striped">
+                        <thead>
+                            <tr>
+                                <th *ngFor="let cell of headerRow">{{ cell }}</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let row of listDeworms">  
+                                  <td>{{row.de_name| lowercase}}</td>
+                                  <td>{{row.de_date| myDate}}</td> 
+                                  <td> {{row.de_doctor}}</td> 
+                                 
+                                 <td>
+                                      <!-- <button type="button" class="btn btn-default" (click)="edit(row._id)">Get Data</button> -->
+                               
+                                          <a (click)="update(row.de_id)">  <i class="pe-7s-pen"></i></a>
+                                          <a (click)="delete(row.de_id)">  <i class="pe-7s-scissors"></i> </a>
+                                  </td> 
+                            </tr>
+                        </tbody>
+                  </table>
+
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
