--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}} Template from <a href="http://www.creative-tim.com">Creative Tim</a>
+            &copy; {{test | date: 'yyyy'}}
         </p>
     </div>
 </footer>
