--- a/src/app/phone/phone.component.html
+++ b/src/app/phone/phone.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-12">
               <div class="card">
                   <div class="header">
-                      <h4 class="title">Phones</h4>
+                      <h4 class="title">Phones : {{person_name}}</h4>
                   </div>
                   <div class="content">
                           <form  [formGroup]="myForm" (ngSubmit)="onSubmit()">
